--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Apotoxin Fansub</title>
 	<meta http-equiv="Refresh" content="0; url=31102021/index.html">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXVXCFVYF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNXVXCFVYF');
+</script>
+
 </head>
 <body>
 	<a href="31102021/index.html"><h3> Clic aquí... </h3></a>
