--- a/31102021/index.html
+++ b/31102021/index.html
@@ -28,6 +28,17 @@
 <link rel="stylesheet" href="css_hw/common.css">
 <link rel="stylesheet" href="css_hw/home4da0.css?1104">
 
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXVXCFVYF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNXVXCFVYF');
+</script>
+
 </head>
 
 <body class="pageHome" id="pagetop" onselectstart="return false;" onmousedown="return false;" oncontextmenu="return false;">
