--- a/27042022/index.html
+++ b/27042022/index.html
@@ -51,7 +51,7 @@
 
 <div class="bnr">
 	<a href="../26042022/index.html"><img src="../img/nav/before.jpg"></a>
-<!-- 	<a href="../28042022/index.html"><img src="../img/nav/later.jpg" class="mt10"></a> -->
+	<a href="../28042022/index.html"><img src="../img/nav/later.jpg" class="mt10"></a>
 </div>
 
 <!-- ▼loading -->
